# evalstack

./: LICENSE  README.md  pyproject.toml  requirements.txt
evalstack/: __init__.py  core.py  scorer.py
tests/: test_scorer.py
