[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evalstack"
version = "0.0.1"
description = "Open source eval and observability framework for production multi-agent AI systems."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Ajith Joseph", email = "a4ajith@gmail.com"}
]
keywords = ["llm", "eval", "agents", "observability", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.25.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://evalstack.dev"
Repository = "https://github.com/ajithjoseph/evalstack"
